# capture

./: .gitignore  CLAUDE.md  LICENSE  README.md  SPEC.md  index.html  package-lock.json  package.json
.github/workflows/: build-installers.yml  ci.yml  release.yml
scripts/: check-capabilities.mjs  run-macos.sh
src/: App.tsx  CaptureActions.tsx  PermissionDialog.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  enhance.rs  hotkey.rs  lib.rs  main.rs  scroll.rs  scroll_input.rs  settings.rs  stitch.rs  storage.rs
src-tauri/src/capture/: mod.rs  permission.rs  windows.rs  xcap_impl.rs
src-tauri/src/ocr/: mod.rs  vision.rs  windows.rs
src/about/: AboutDialog.tsx
src/components/: ContextMenu.tsx  Select.tsx  Toggle.tsx
src/editor/: Editor.tsx  TextResultDialog.tsx  Toolbar.tsx  useAnnotations.ts
src/editor/shapes/: ArrowShape.tsx  BlurRegion.tsx  EllipseShape.tsx  ImageObject.tsx  StepBadge.tsx  TextShape.tsx
src/gallery/: DeleteCapturesDialog.tsx  GalleryStrip.tsx  GalleryThumb.tsx
src/lib/: hotkey.ts  icons.tsx  images.ts  ipc.ts  types.ts
src/overlay/: RegionOverlay.tsx
src/scroll/: ScrollPanel.tsx
src/settings/: SettingsDialog.tsx
